--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-state": "^2.1.0",
-    "react-use-audio-player": "^1.2.6"
+    "react-use-audio-player": "^1.2.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
